--- a/1803.cbp
+++ b/1803.cbp
@@ -39,6 +39,7 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
+		<Unit filename="Ball.h" />
 		<Unit filename="Untitled1.h" />
 		<Unit filename="Untitled2.cpp" />
 		<Unit filename="Untitled2.h" />
