--- a/1803.cbp
+++ b/1803.cbp
@@ -48,6 +48,8 @@
 		<Unit filename="graphic.h" />
 		<Unit filename="main.cpp" />
 		<Unit filename="nhanvat.h" />
+		<Unit filename="obstacle.cpp" />
+		<Unit filename="obstacles.h" />
 		<Extensions>
 			<lib_finder disable_auto="1" />
 		</Extensions>
