--- a/1803.cbp
+++ b/1803.cbp
@@ -44,6 +44,8 @@
 		</Compiler>
 		<Unit filename="Ball.h" />
 		<Unit filename="IntroScreen.h" />
+		<Unit filename="LevelManager.cpp" />
+		<Unit filename="LevelManager.h" />
 		<Unit filename="Untitled1.h" />
 		<Unit filename="Untitled2.cpp" />
 		<Unit filename="Untitled2.h" />
